turtleart.disktwo.DiskTwo.scala.error
Compilation error:
DiskTwo:6: error: type mismatch;
 found   : Double
 required: Int
  for(k<-0 to angle){
              ^DiskTwo:12: error: type mismatch;
 found   : Double
 required: Int
  for(k<-0 to angle){
              ^